--- a/discovery-frontend/src/assets/i18n/en.json
+++ b/discovery-frontend/src/assets/i18n/en.json
@@ -504,7 +504,9 @@
   "msg.bench.btn.minimize": "Minimize",
   "msg.bench.btn.refresh": "Refresh",
   "msg.bench.btn.chart.preview": "Chart Preview",
+  "msg.bench.btn.save.as": "Save as...",
   "msg.bench.btn.save.as.datasource": "Save as Datasource",
+  "msg.bench.btn.save.as.hive-table": "Save as Hive Table",
   "msg.bench.btn.export.file": "Export CSV file",
   "msg.bench.btn.view.excel" : "Online Excel View",
   "msg.bench.btn.online.excel": "Online Excel",
@@ -596,6 +598,11 @@
   "msg.bench.ui.value" : "Value",
   "msg.bench.alert.global.variable.delete" : "Are you sure you want to delete the global variable?",
   "msg.bench.ui.global.variable.duplicated" : "Duplicated",
+  "msg.bench.ui.save-as-hive-table.title": "Save As Hive Table",
+  "msg.bench.ui.save-as-hive-table.table-name": "Table name",
+  "msg.bench.ui.save-as-hive-table.table-name.ph": "Please enter save as table name",
+  "msg.bench.alert.invalid-hive-table-name": "Only numbers, alphabets, and underscores are allowed",
+  "msg.bench.alert.already-exists-table": "The table already exists.",
 
   "msg.nbook.alert.input.name": "Please enter notebook name",
   "msg.nbook.alert.input.description": "Please enter notebook description",
@@ -1474,6 +1481,15 @@
   "msg.storage.th.user_name.ph": "Please enter user name",
   "msg.storage.th.pwd": "Password",
   "msg.storage.th.pwd.ph": "Please enter password",
+  "msg.storage.ui.enable-save-as-hive-table": "Enable Save as Hive Table In Workbench",
+  "msg.storage.th.hive-admin-name": "Hive admin name",
+  "msg.storage.th.hive-admin-name.ph": "Please enter hive admin name",
+  "msg.storage.th.hive-admin-password": "Hive admin password",
+  "msg.storage.th.hive-admin-password.ph": "Please enter hive admin password",
+  "msg.storage.th.hive-personal-db-prefix": "Hive personal database prefix",
+  "msg.storage.th.hive-personal-db-prefix.ph": "Please enter hive personal database prefix",
+  "msg.storage.th.hdfs-config-path": "HDFS configuration path",
+  "msg.storage.th.hdfs-config-path.ph": "Please enter HDFS configuration path",
   "msg.storage.btn.test": "Validation check",
   "msg.storage.ui.invalid.conn": "Invalid Connection. Please check server information",
   "msg.storage.ui.valid.conn": "Valid Connection",
@@ -1897,6 +1913,7 @@
   "msg.storage.ui.job.properties.description": "Ingestion tuning configuration describes effective options when ingestion. Now put it in the corresponding text box in JSON format",
   "msg.storage.ph.config.key": "Please enter a configuration key",
   "msg.storage.ph.config.value": "Please enter a configuration value",
+  "msg.storage.ui.max.row.error": "You can enter up to {{value}}.",
   "msg.storage.ui.db.connection" : "DB connection",
   "msg.storage.ui.conn.dialog.desc" : "Can not ingest by batch method.",
   "msg.storage.ui.max.row.error": "You can enter up to {{value}}.",
@@ -1906,9 +1923,9 @@
   "msg.storage.ui.format.unit.milli-second": "Milli-Second(ms)",
   "msg.storage.ui.format.unit.second": "Second(s)",
   "msg.storage.ui.engine.name": "Engine name",
-  "msg.storage.ui.ingestion.step-1": "Transfer data",
-  "msg.storage.ui.ingestion.step-2": "Ingesting druid",
-  "msg.storage.ui.ingestion.step-3": "Check status",
+  "msg.storage.ui.ingestion.step-1": "Preparing data",
+  "msg.storage.ui.ingestion.step-2": "Ingesting on engine",
+  "msg.storage.ui.ingestion.step-3": "Checking status",
   "msg.storage.ui.ingestion.step-4": "Success",
   "msg.storage.ui.partition.info.title": "How to specify partitions?",
   "msg.storage.ui.partition.info.desc": "Partitions can be specified only with specific numbers or expressions, Please refer to examples below for using expressions.",
@@ -1925,6 +1942,7 @@
   "msg.storage.btn.partition.result": "See result",
   "msg.storage.ui.partition.result": "Result",
   "msg.storage.ui.connection.jdbc.table.error": "Due to internal server constraints, it is impossible to query data in table mode. You can query data in Query mode",
+  "msg.storage.ui.ingestion.failed.history": "Ingestion history can not be loaded",
 
   "msg.log.th.status": "Status",
   "msg.log.ui.search.description" : "Search by job and application",
