--- a/discovery-frontend/src/assets/i18n/ko.json
+++ b/discovery-frontend/src/assets/i18n/ko.json
@@ -504,7 +504,9 @@
   "msg.bench.btn.minimize" : "창 줄이기",
   "msg.bench.btn.refresh" : "초기화",
   "msg.bench.btn.chart.preview" : "차트 미리보기",
+  "msg.bench.btn.save.as": "결과 저장",
   "msg.bench.btn.save.as.datasource" : "데이터소스 저장",
+  "msg.bench.btn.save.as.hive-table": "Hive 테이블 저장",
   "msg.bench.btn.export.file": "다운로드 CSV",
   "msg.bench.btn.view.excel" : "온라인 엑셀뷰",
   "msg.bench.btn.online.excel" : "온라인 엑셀",
@@ -596,6 +598,11 @@
   "msg.bench.ui.value" : "값",
   "msg.bench.alert.global.variable.delete" : "글로벌 변수를 삭제하시겠습니까?",
   "msg.bench.ui.global.variable.duplicated" : "중복",
+  "msg.bench.ui.save-as-hive-table.title": "Hive 테이블로 저장",
+  "msg.bench.ui.save-as-hive-table.table-name": "테이블 이름",
+  "msg.bench.ui.save-as-hive-table.table-name.ph": "테이블 이름을 입력해 주세요",
+  "msg.bench.alert.invalid-hive-table-name": "숫자와 알파벳 그리고 언더 스코어(_)만 허용됩니다",
+  "msg.bench.alert.already-exists-table": "이미 테이블이 존재 합니다",
 
   "msg.nbook.alert.input.name": "노트북 이름을 입력해 주세요",
   "msg.nbook.alert.input.description": "노트북 설명을 입력해 주세요",
@@ -1474,6 +1481,15 @@
   "msg.storage.th.user_name.ph": "사용자이름을 입력해 주세요",
   "msg.storage.th.pwd": "비밀번호",
   "msg.storage.th.pwd.ph": "비밀번호를 입력해 주세요",
+  "msg.storage.ui.enable-save-as-hive-table": "워크 벤치에서 Hive 테이블로 저장히는 기능 사용",
+  "msg.storage.th.hive-admin-name": "Hive 관리자 이름",
+  "msg.storage.th.hive-admin-name.ph": "Hive 관리자 이름을 입력해 주세요",
+  "msg.storage.th.hive-admin-password": "Hive 관리자 비밀번호",
+  "msg.storage.th.hive-admin-password.ph": "Hive 관리자 비밀번호를 입력해 주세요",
+  "msg.storage.th.hive-personal-db-prefix": "Hive 개인 데이터베이스 접두사",
+  "msg.storage.th.hive-personal-db-prefix.ph": "Hive 개인 데이터베이스 접두사를 입력해 주세요",
+  "msg.storage.th.hdfs-config-path": "HDFS 설정 파일 경로",
+  "msg.storage.th.hdfs-config-path.ph": "HDFS 설정 파일 경로를 입력해 주세요",
   "msg.storage.btn.test": "유효성 체크",
   "msg.storage.ui.invalid.conn": "잘못된 커넥션. 서버 정보를 확인해 주세요",
   "msg.storage.ui.valid.conn": "유효한 커넥션",
@@ -1908,9 +1924,9 @@
   "msg.storage.ui.format.unit.milli-second": "밀리세컨드(ms)",
   "msg.storage.ui.format.unit.second": "세컨드(s)",
   "msg.storage.ui.engine.name": "엔진 이름",
-  "msg.storage.ui.ingestion.step-1": "데이터 이관",
-  "msg.storage.ui.ingestion.step-2": "Druid 적재",
-  "msg.storage.ui.ingestion.step-3": "상태확인",
+  "msg.storage.ui.ingestion.step-1": "데이터 준비",
+  "msg.storage.ui.ingestion.step-2": "엔진 적재",
+  "msg.storage.ui.ingestion.step-3": "상태 확인",
   "msg.storage.ui.ingestion.step-4": "완료",
   "msg.storage.ui.partition.info.title": "파티션 표현 방법?",
   "msg.storage.ui.partition.info.desc": "파티션 표현 시 숫자에 대해서만 특정 숫자 혹은 Expression으로 표현 가능합니다. Expression은 하단의 예를 참고하세요.",
@@ -1927,6 +1943,7 @@
   "msg.storage.btn.partition.result": "결과 보기",
   "msg.storage.ui.partition.result": "결과",
   "msg.storage.ui.connection.jdbc.table.error": "서버 내부 제한 조건으로 인해 테이블 모드에서 데이터 조회가 불가능합니다. Query 모드에서 데이터를 조회할 수 있습니다",
+  "msg.storage.ui.ingestion.failed.history": "적재 이력을 가져오지 못했습니다",
 
   "msg.log.th.status": "상태",
   "msg.log.ui.search.description" : "잡 이름 또는 어플리케이션 ID로 검색해 주세요",
